# luma

./: .biomeignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  SUPABASE_SCHEMA.sql  VENUE_SHARING_PLAN.md  biome.json  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  DEBUG_SELECTION_NODE.md  README.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/prodjlink/: Cargo.toml
src-tauri/crates/rekordbox/: Cargo.toml
src-tauri/crates/stagelinq/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251220125200_create_tables.sql  20251221100000_add_uid.sql  20251228120000_add_fixture_groups.sql  20260129000000_add_fixture_tags.sql  20260130000000_group_tags.sql  20260130100000_zup_coordinate_swap.sql  20260207000000_add_track_source_columns.sql  20260207100000_waveform_binary_blobs.sql  20260208000000_waveform_decoded_duration.sql  20260208200000_shareable_patterns.sql  20260208200001_backfill_implementation_uid.sql  20260209000000_drop_default_implementation_id.sql  20260210000000_seed_pattern_categories.sql  20260213000000_add_movement_config.sql  20260310000000_add_venue_id_to_scores.sql  20260310000001_fix_score_uids.sql  20260310000002_delete_legacy_null_venue_scores.sql  20260310000003_backfill_child_uids.sql  20260321000000_add_venue_share_code_and_role.sql  20260321000001_drop_venue_remote_id_unique.sql  20260322000000_drop_fixture_remote_id_unique.sql  20260323000000_uuid_everywhere.sql  20260323100000_venue_memberships.sql  20260325000000_multi_score.sql  20260325100000_add_fixture_groups_venue_name_unique.sql  20260326000000_dedupe_fixture_groups.sql  20260326100000_tracks_drop_hash_unique.sql  20260326200000_restore_tracks_trigger.sql  20260328000000_sync_engine.sql  20260328100000_group_members_sync_columns.sql  20260328200000_delete_sync_triggers.sql  20260328300000_origin_provenance.sql  20260328400000_rename_is_published_to_is_verified.sql  20260328500000_denormalize_category_name.sql  20260328600000_album_art_storage_path.sql  20260328700000_sync_state_per_user.sql  20260329000000_drop_cascade_child_delete_triggers.sql  20260401000000_midi_controller.sql  20260402000000_restore_track_scores_delete_trigger.sql  20260402100000_venue_controller_port.sql  (+12 more)
src-tauri/migrations/app/: 20251126043700_init.sql  20251205000000_add_blend_mode.sql  20251206120000_add_logits_path.sql  20251210120000_create_settings.sql  20251212090000_add_pattern_categories.sql
src-tauri/migrations/project/: 20251126043700_init.sql  20251126050000_fixtures.sql
src-tauri/python/: ace_chord_sections_worker.py  adtof_worker.py  audio_preprocessor.py  beat_worker.py  classifier_worker.py  mert_preload.py  mert_worker.py  n2n_worker.py  plot_root_probs.py  requirements.txt
src-tauri/python-runtime/: .gitkeep
src-tauri/python/adtof/: requirements.txt
src-tauri/python/classifier/: bar_classifier.pt  requirements.txt  tag_thresholds.json
src-tauri/python/mert/: requirements.txt
src-tauri/python/n2n/: infer.py  requirements.txt  weights.pt
src-tauri/src/: README.md  adtof_worker.rs  annotation_preview.rs  annotations.rs  artnet.rs  auth.rs  beat_worker.rs  categories.rs  classifier_worker.rs  cmd_util.rs  compositor.rs  config.rs  controller_compositor.rs  controller_manager.rs  database.rs  ffmpeg_env.rs  host_audio.rs  lib.rs  mert_worker.rs  mixer_manager.rs  n2n_worker.rs  patterns.rs  playback.rs  prodjlink_manager.rs  project_manager.rs  python_env.rs  render_engine.rs  root_worker.rs  schema.rs  settings.rs  stagelinq_manager.rs  stem_worker.rs  tensor_test.rs  topo.rs  tracks.rs  waveforms.rs
src-tauri/src/audio/: analysis.rs  cache.rs  decoder.rs  fft.rs  filters.rs  melspec.rs  mod.rs  resample.rs  stem_cache.rs
src-tauri/src/commands/: annotations.rs  auth.rs  categories.rs  cloud_sync.rs  controller.rs  engine_dj.rs  export.rs  fixtures.rs  groups.rs  midi.rs  mixer.rs  mod.rs  node_graph.rs  patterns.rs  perform.rs  rekordbox.rs  scores.rs  sync.rs  tags.rs  tracks.rs  venues.rs  waveforms.rs
src-tauri/src/database/: mod.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/engine_dj/: db.rs  mod.rs  types.rs
src-tauri/src/fixtures/: engine.rs  layout.rs  mod.rs  (+2 more)
src-tauri/tests/: benchmark_audio.rs
(+462 files in other folders)
