[workspace]
members = [".", "crates/stagelinq"]

[package]
name = "luma"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "luma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bench_waveform"
path = "src/bin/bench_waveform.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
reqwest = { version = "0.12", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
ts-rs = { version = "11.1", features = ["serde-compat"] }
petgraph = "0.6"
base64 = "0.21"
lofty = "0.22.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
realfft = "3.5"
chord_detector = "0.1.0"
rayon = "1.10"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aac", "ogg", "vorbis"] }
rodio = "0.17"
cpal = "0.15"
tokio = { version = "1", features = ["macros", "sync", "time"] }
once_cell = "1"
quick-xml = { version = "0.38.4", features = ["serialize"] }
rand = "0.8"
walkdir = "2.5.0"
stagelinq = { path = "crates/stagelinq" }
dirs = "5"

# Optimize in dev builds — DSP, FFT, audio codecs are unusably slow without it
[profile.dev]
opt-level = 2
