[package]
name = "prodjlink"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread", "io-util"] }
serde = { version = "1", features = ["derive"] }
if-addrs = "0.13"
socket2 = { version = "0.6", features = ["all"] }
