[package]
name = "stagelinq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
byteorder = "1"

[[bin]]
name = "stagelinq-debug"
path = "src/bin/debug.rs"

[[bin]]
name = "tcp-test"
path = "src/bin/tcp_test.rs"
